[package]
name = "joke"
version = "0.1.0"
edition = "2021"
authors = ["Decator <decator.c@proton.me>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
thiserror = "1.0"
lazy_static = "1.4"
chrono = "0.4"
help = { path = "../help" }