[package]
name = "quote"
version = "0.1.0"
authors = ["Decator <decator.c@proton.me>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
help = { path = "../help" }